# milestone-app

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  README.md  start-milestone.ps1
.github/workflows/: ci.yml  release.yml
apps/desktop/: .eslintrc.json  index.html  jest.config.js  package-lock.json  package.json  test-electron.js  tsconfig.json  tsconfig.main.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  index.css  (+4 more)
docs/: api-spec.md  architecture.md  deep_code_audit.md  deep_theory_audit.md  electron-dev-startup-fix.md  fix_plan.md  known-limitations.md  resilience-assumptions.md  resilience-verification.md  safety_model_review.md  ux-notes.md
services/api/: pyproject.toml  requirements-dev.txt  requirements.txt
services/api/data/: milestone.db
services/api/src/: config.py  copier.py  database.py  expert.py  hasher.py  main.py  matcher.py  models.py  parser.py  placement.py  planning.py  plugins.py  queue.py  resilience.py  risk_scorer.py  scanner.py  schema.sql  sidecars.py  simulator.py
services/api/src/migrations/: v110.py  v200.py  v201_plan_execution.py
services/api/src/routers/: advanced_copy.py  analytics.py  cleanup.py  domains.py  drives.py  evacuation.py  expert.py  exports.py  failure_domains.py  files.py  hash.py  items.py  normalize.py  ops.py  overrides.py  placement.py  planning.py  plans.py  recovery.py  reduction.py  risk.py  roots.py  scan.py  sidecars.py  simulation.py
services/api/tests/: test_main.py  test_placement.py  test_resilience.py  test_risk_scorer.py  test_sidecars.py  test_simulation.py
(+24 files in other folders)
